white gap fix attempt no 4

--- a/style.css
+++ b/style.css
@@ -27,9 +27,6 @@ html{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100%;
-    min-height: 100dvh;
-    
 }
 body{
     margin: 0;
@@ -42,7 +39,7 @@ body{
     color: #2c2c2c;
 }
 footer{
-    display: flex;
+    display: none;
     justify-content: center;
     background-color: #050709;
     color: #cfd7e6;
